# tdd_project

my_project/: README.md  docker-compose.yml
my_project/app/: config.py  main.py
my_project/project/: Dockerfile  alembic.ini  pyproject.toml
my_project/project/alembic/: env.py
my_project/project/app/: config.py  db.py  main.py
my_project/project/app/api/: crud.py  summaries.py
my_project/project/app/models/: alchemy.py  pydantic.py
my_project/project/db/: Dockerfile
my_project/project/test/: conftest.py  test_summaries.py
